--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav>
         <a class="logo-studio" href="./index.html"><span class="logo-web">Web</span>Studio</a>
         <ul class="lists">
-          <li><a class="links" href="./index.html">Студия</a></li>
+          <li><a class="links active" href="./index.html">Студия</a></li>
           <li><a class="links" href="./portfolio.html">Портфолио</a></li>
           <li><a class="links" href="">Контакты</a></li>
         </ul>
