--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,9 @@
       <nav>
         <a class="logo-studio" href="./index.html"><span class="logo-web">Web</span>Studio</a>
         <ul class="lists">
-          <li><a class="links active" href="./index.html">Студия</a></li>
+          <li><a class="links" href="./index.html">Студия</a></li>
           <li><a class="links active" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="links active" href="">Контакты</a></li>
+          <li><a class="links" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul class="lists">
@@ -91,7 +91,7 @@
           </li>
           <li>
             <a class="links-posters" href=""
-              ><img src="./images/limited edition.jpg" alt="example of designe" width="370" />
+              ><img src="./images/limited edition.jpg" alt="example" width="370" />
               <h3 class="posters">Издание Limited Edition</h3>
               <p class="description-project">Дизайн</p>
             </a>
